# miniusv

./: .npmrc  README.md  vercel.json
left_brain_control_iMX8/: CMakeLists.txt
left_brain_control_iMX8/include/usv_control/: usv_types.h
left_brain_control_iMX8/src/: main.cpp
left_brain_control_iMX8/src/attitude_control/: heading_controller.cpp  heading_controller.h  pid_controller.cpp  pid_controller.h  speed_controller.cpp  speed_controller.h
left_brain_control_iMX8/src/bms_monitor/: bms_monitor.cpp  bms_monitor.h  power_manager.cpp  power_manager.h
left_brain_control_iMX8/src/brain_bridge/: brain_bridge_r.cpp  brain_bridge_r.h  protocol_r.cpp  protocol_r.h
left_brain_control_iMX8/src/can_bus/: can_interface.c  can_interface.h  can_protocol.c  can_protocol.h
left_brain_control_iMX8/src/motor_control/: esc_controller.cpp  esc_controller.h  jet_thrust_mapper.cpp  jet_thrust_mapper.h  motor_manager.cpp  motor_manager.h
left_brain_control_iMX8/src/watchdog/: watchdog.cpp  watchdog.h
right_brain_AI_Jetson/: CMakeLists.txt  package.xml
right_brain_AI_Jetson/scripts/: right_brain_main.py
right_brain_AI_Jetson/src/usv_atr/usv_atr/: __init__.py  atr_pipeline.py  target_tracker.py  yolo_detector.py
right_brain_AI_Jetson/src/usv_avoidance/usv_avoidance/: __init__.py  colregs_compliance.py  dwa_avoidance.py  potential_field.py
right_brain_AI_Jetson/src/usv_brain_bridge/usv_brain_bridge/: __init__.py  brain_bridge.py  protocol.py
right_brain_AI_Jetson/src/usv_perception/usv_perception/: __init__.py  camera_processor.py  lidar_processor.py  occupancy_map.py  radar_processor.py  sensor_fusion.py
right_brain_AI_Jetson/src/usv_planning/usv_planning/: __init__.py  a_star_planner.py  mission_state.py  rrt_star_planner.py  waypoint_manager.py
right_brain_AI_Jetson/src/usv_threat_assessment/usv_threat_assessment/: __init__.py  threat_evaluator.py
src/: App.tsx
src/data/: articles.ts  solutions.ts
src/pages/: AboutPage.tsx  HomePage.tsx  SolutionDetailPage.tsx  SolutionsPage.tsx
usv-platform/src/data/: articles.ts  solutions.ts
usv-platform/src/pages/: AboutPage.tsx  ArticleDetailPage.tsx  BlogPage.tsx  HomePage.tsx  SolutionDetailPage.tsx  SolutionsPage.tsx
usv-platform/usv-platform/src/data/: solutions.ts
usv-platform/usv-platform/src/pages/: ArticleDetailPage.tsx  ContactPage.tsx  SolutionsPage.tsx
usv-website/: index.html
usv-website/assets/: index-4ftA4_AV.js  index-AeQT7rX8.css
