<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_right_brain_ai</name>
  <version>1.0.0</version>
  <description>Right Brain (AI) - Jetson Orin NX + ROS2 - AI Perception, Planning &amp; Decision for USV</description>
  <maintainer email="usv@seablade.com">SeaBlade USV Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>custom_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pytorch</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
